# AMV_3DFaceDetection

./: .Dockerfile  docker-compose-mac.yaml  docker-compose-ubuntu.yaml  docker-compose.yaml  s.py
dlib/detector/: CMakeLists.txt  detector.cpp  detector_arch.cpp
dlib/detector_cv/: CMakeLists.txt  detector.cpp
dlib/tracker/: CMakeLists.txt  tracker.cpp
opencv/: CMakeLists.txt  detector.cpp
src/: run.py
